--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <mybatisplus.version>3.4.1</mybatisplus.version>
         <velocity.version>2.2</velocity.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
+        <guava.version>29.0-jre</guava.version>
+        <commons.lang3.version>3.11</commons.lang3.version>
     </properties>
 
     <dependencies>
@@ -75,6 +77,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- 数据模型转换 -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
@@ -84,13 +87,13 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>29.0-jre</version>
+            <version>${guava.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.11</version>
+            <version>${commons.lang3.version}</version>
         </dependency>
 
     </dependencies>
