--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,10 @@
         <mybatisplus.version>3.4.1</mybatisplus.version>
         <velocity.version>2.2</velocity.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
+        <lombok.version>1.18.12</lombok.version>
         <guava.version>29.0-jre</guava.version>
         <commons.lang3.version>3.11</commons.lang3.version>
+        <commons.collections4.version>4.4</commons.collections4.version>
     </properties>
 
     <dependencies>
@@ -82,6 +84,7 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -95,6 +98,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons.lang3.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons.collections4.version}</version>
+        </dependency>
+
 
     </dependencies>
 
