--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,19 @@
         <knife4j.version>3.0.2</knife4j.version>
         <shiro.version>1.7.0</shiro.version>
         <jwt.version>3.12.0</jwt.version>
+        <thymeleaf.layout.dialect.version>2.5.2</thymeleaf.layout.dialect.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>${thymeleaf.layout.dialect.version}</version>
         </dependency>
 
         <!-- spring mvc -->
