--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
             <artifactId>caffeine</artifactId>
         </dependency>
 
+        <!-- MQ 解决方案 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
